--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@
 # Config directory
 # Directory where files, logs and database will be stored
 # Example: LANGFLOW_CONFIG_DIR=~/.langflow
-LANGFLOW_CONFIG_DIR=
+LANGFLOW_CONFIG_DIR=~/.langflow
 
 # Save database in the config directory
 # Values: true, false
@@ -15,7 +15,7 @@ LANGFLOW_CONFIG_DIR=
 # This means that the database will be deleted when Langflow is uninstalled
 # and that the database will not be shared between different virtual environments
 # Example: LANGFLOW_SAVE_DB_IN_CONFIG_DIR=true
-LANGFLOW_SAVE_DB_IN_CONFIG_DIR=
+LANGFLOW_SAVE_DB_IN_CONFIG_DIR=true
 
 # Database URL
 # Postgres example: LANGFLOW_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/langflow
